# steelkilt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  TESTS.md
.github/workflows/: ci.yml  release.yml
examples/: advanced_combat.rs  advanced_features.rs  combat_sim.rs  magic_combat.rs  quick_combat.rs
examples/combatants/: brother_aldwyn.json  elyndra_swiftarrow.json  kael_the_swift.json  mira_starweaver.json  morgana_darkbane.json  ragnar_bloodaxe.json  thora_shieldmaiden.json  zephyr_the_quick.json
examples/steelkilt_bevy/: CLAUDE.md  Cargo.toml
examples/steelkilt_bevy/combatants/: README.md  borin_boltmaster.json  garrick_ironwall.json  grimwald_ironfist.json  mira_starweaver.json  sylvana_moonwhisper.json
examples/steelkilt_bevy/src/: combat.rs  components.rs  file_ops.rs  main.rs  main_menu.rs  main_menu_plugin.rs  management.rs  management_plugin.rs  selection.rs  selection_plugin.rs  state.rs
examples/steelkilt_bevy/src/combat/: helpers.rs  input_handler.rs  melee.rs  mod.rs  plugin.rs  ranged.rs  ui.rs
examples/steelkilt_bevy/src/main_menu/: input_handler.rs  mod.rs  plugin.rs  ui.rs
examples/steelkilt_sim/: .gitignore  Cargo.toml  README.md
examples/steelkilt_sim/src/: combat.rs  engine.rs  fighters.rs  file_ops.rs  main.rs  models.rs  state.rs  ui.rs
src/: lib.rs
src/modules/: exhaustion.rs  hit_location.rs  magic.rs  maneuvers.rs  mod.rs  ranged_combat.rs  skills.rs
tests/: combat_integration.rs  magic_integration.rs  multi_round_scenarios.rs  ranged_combat_integration.rs  skills_integration.rs
(+8 files in other folders)
