[package]
name = "steelkilt_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
steelkilt = { path = "../..", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.5.51", features = ["derive"] }
shlex = "1.3"
comfy-table = "7"
inquire = "0.9.1"
inquire-derive = "0.9.0"
text-colorizer = "1"
